@@ -1,3 +1,3 @@
-rcsb.utils.io >= 0.85
+rcsb.utils.io >= 0.89
 backports.range; python_version < "3.0"
 jsonschema >= 2.6.0
