@@ -38,3 +38,4 @@
    9-Oct-2020    V0.44 Add organism host taxonomy
   24-Oct-2020    V0.46 Adjust tests to handle Ubuntu 20.04 issues
   30-Nov-2020    V0.47 add UniProtIdMappingProvider() and tests.
+   1-Dec-2020    V0.48 make UniProtIdMappingProvider() a singleton.
